# hft

./: .gitignore  .travis.yml  README.md  about.html  archives.html  hft.cabal  hft.org  index.html  index.xml  sitemap.xml  tags.html
R/: signal.prediction.R
blog/: candidate-structure.html  index.html  latency-research.html  market-feed-selection.html  project-news-april-232013.html  signal-prediction.html  statistical-forecasting.html  welcome-to-hft.html  zipline.html
blog/latency-research/: index.html
blog/signal-prediction/: index.html
blog/statistical-forecasting/: index.html
haskell/Hft/: Iqconnect.hs
haskell/dev/: Feed.hs  Iqtest.hs
haskell/test/: Iqtest.hs
pages/: index.html
tags/: design.html  index.html  research.html
tags/design/: index.xml
tags/r/: index.xml
tags/research/: index.xml
